<package>
  <name>ati_sensor</name>
  <version>1.1.0</version>
  <description>The package for FT sensors using the ATI net box.</description>

  <maintainer email="dingyc520@qq.com">Antoine Hoarau</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libxml2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
