<?xml version="1.0"?>
<package>
  <name>ur5_bringup</name>
  <version>0.0.0</version>
  <description>The ur5_bringup package</description>

  <maintainer email="dingyc@todo.todo">medina</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>gazebo_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
